@@ -256,6 +256,7 @@ what you want. Currently the conditionally built modules are:
     <copy todir="${classes.dir}">
       <fileset dir="${src.dir}"  includes="**/resources/*.gif"/>
       <fileset dir="${src.dir}"  includes="**/resources/*.png"/>
+      <fileset dir="${src.dir}"  includes="**/resources/*.keystore"/>
     </copy>
 
     <copy todir="${classes.dir}" filtering="on">
