@@ -10,6 +10,9 @@ Grinder 3.0-beta22
   Fix bug in HTTPPlugin. Can now handle responses with a
   Content-Length of 0.
 
+  The TCPProxy now uses a built-in default key store if none is
+  specified.
+
 
 Grinder 3.0-beta21
 ------------------
